Oct 02, 2015 - chris ---------------------------------------------------
o Removed lzo compression
o Removed configure option --disable-compression; compression is now
    always enabled

Oct 01, 2015 - chris ---------------------------------------------------
o Remote URL identifier ham:// was changed to ups://

Sep 29, 2015 - chris ---------------------------------------------------
o Removed ups_key_get_approximate_match_type
o Renamed ups_db_get_key_count to ups_db_count

Sep 23, 2015 - chris ---------------------------------------------------
o Merging the functionality of hamsterdb pro
o Changed license to GPL 3.0
o Removed ham_is_pro, ham_is_pro_evaluation
o Rebranding: renamed namespace prefix "ham_" to "ups_", "HAM_" to "UPS_"
o Renamed ham_set_errhandler to ups_set_error_handler
o Removed the flag UPS_FIND_NEAR_MATCH
o Renamed the flag UPS_FIND_EXACT_MATCH UPS_FIND_EQ_MATCH
o Removed ups_db_get_error

Aug 26, 2015 - chris ---------------------------------------------------
o issue #58 (.NET) - fixed crash in ham_strerror

Jun 19, 2015 - chris ---------------------------------------------------
o Fixing a bug during recovery where modified pages were not recreated
o Reducing ftruncate() system calls

Jun 04, 2015 - chris ---------------------------------------------------
o Fixing compilation with --disable-remote

Jun 03, 2015 - chris ---------------------------------------------------
o Make sure that journal is correclty cleared after recovery

May 26, 2015 - chris ---------------------------------------------------
o Make sure that errors are not ignored when creating remote cursors
	(thanks, Ciprian Niculescu)

May 07, 2015 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.11

May 06, 2015 - chris ---------------------------------------------------
o C++ API no longer throws exceptions in destructors (thanks, Michael Möllney)
o issue #49: fixed approx. matching issue with remote server
